--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -99,6 +99,13 @@ body {
   .pagination {
     margin: 12px 0;
   }
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
+  }
+  .reply-content {
+    margin: 6px 0;
+  }
 }
 
 /* Topic Index Page */
@@ -129,5 +136,33 @@ body {
       border: 0;
       border-top: 1px solid #dcebf5;
     }
+  }
+}
+
+/* Topic Show Page */
+@import "topic_body";
+
+.topics-show-page {
+  .panel {
+    padding: 15px;
+    h1 {
+      margin: 0.4em auto 0.6em;
+      font-size: 28px;
+      line-height: 38px;
+    }
+  }
+}
+
+.topic-reply {
+  hr {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+  a {
+    color: inherit;
+  }
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
   }
 }
