--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -166,3 +166,15 @@ body {
     color: #b3b3b3;
   }
 }
+
+/* Notifications badge */
+.notifications-badge {
+  margin-top: -1;
+
+  .badge-fade {
+    background-color: #E8E8E8;
+  }
+  .badge-hint {
+    background-color: #d15b47 !important;
+  }
+}
